Спринт 9: Первая версия

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+logging.level.ru.yandex.practicum=INFO
+logging.level.ru.yandex.practicum.filmorate.model.constraints=WARN
+logging.level.org.springframework=INFO
