--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,7 +2,7 @@ logging.level.ru.yandex.practicum=INFO
 logging.level.org.springframework=INFO
 
 spring.sql.init.mode=always
-spring.datasource.url=jdbc:h2:file:./db/filmorate;NON_KEYWORDS=user
+#spring.datasource.url=jdbc:h2:file:./db/filmorate;NON_KEYWORDS=user
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
